--- a/src/components/Layout/mainContentLayout2/MainContentLayout.css
+++ b/src/components/Layout/mainContentLayout2/MainContentLayout.css
@@ -18,6 +18,7 @@
   width: 20%;
   background-color: #fafbfc;
   overflow-y: auto;
+  width:330px;
 }
 
 .tab-navigation {
@@ -26,7 +27,6 @@
   align-items: center;
   position: sticky;
   top: 0;
-  z-index: 10;
   background: #f7f7f7;
   width: 95%;
   margin: 15px auto;
