--- a/src/components/AIPodcastSysPublisher/AIAudioBook/AudioPlayer/AudioBookPlayer.css
+++ b/src/components/AIPodcastSysPublisher/AIAudioBook/AudioPlayer/AudioBookPlayer.css
@@ -1,15 +1,12 @@
-.audiobook-container {
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  padding: 16px;
-  max-width: 100%;
-  margin: 0 auto;
-  font-family: Arial, sans-serif;
-  background-color: #f9f9f9;
-}
-
-.audiobook-header {
-  margin-bottom: 16px;
+.audiobook-header{
+  height: 112px;
+  background-color: #F3F5F7;
+  padding: 24px 24px 64px 24px;
+  border-radius: 20px;
+  font-size: 17px;
+  font-weight: 400;
+  position: relative;
+  z-index: 0;
 }
 
 .audiobook-title {
@@ -18,18 +15,36 @@
 
 .audio-player {
   margin-bottom: 16px;
+  border-radius: 20px;
+  position: relative;
+  z-index: 0;
 }
 
 .audio-element {
   width: 100%;
+  z-index: 0;
+  border-radius: 10px;
+  height: 37px;
+  width: 920px;
+  margin-top: 25px;
+  margin-bottom: 10px;
+  position: relative;
+  z-index: 0;
 }
+
+.audio-element audio::-webkit-media-controls-play-button,
+     audio::-webkit-media-controls-panel {
+     background-color: #7288FA66 ;
+     }
+
 
 .loading-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 30vh;
+  top: 30px;
 }
 
 .loading-bar {
@@ -72,4 +87,29 @@
   border: none;
   border-radius: 4px;
   cursor: not-allowed;
+}
+
+.microphoneIcon{
+  height: 74px;
+  width: 112px;
+  margin-top: 20px;
+  margin-left: -10px;
+  z-index: 0;
+}
+
+.audiobook-output-display{
+  height: 328px;
+  width: 1000px;
+  background-color: #F3F5F7;
+  border-radius: 20px;
+  margin-top: 40px;
+}
+
+.audiobook-text{
+  font-size: 18px;
+  max-width: 920px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;  
 }
