--- a/src/components/Layout/sidebar/Sidebar.css
+++ b/src/components/Layout/sidebar/Sidebar.css
@@ -317,18 +317,19 @@ input[type="checkbox"] {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.1);
-  z-index: 2;
+  z-index: 99;
+
 }
 
 .popup-content {
-  position: absolute;
+  position: fixed;
   background: #fff;
   border-radius: 15px;
   box-shadow: 0 5px 4px rgba(0, 0, 0, 0.2);
   padding: 12px;
   font-size: 14px;
   width: 280px;
-  z-index: 3;
+  z-index: 100;
 }
 
 .popup-file-name{
