--- a/src/components/AIPodcastSysPublisher/AIAudioBook/AudioPlayer/AudioBookPlayer.css
+++ b/src/components/AIPodcastSysPublisher/AIAudioBook/AudioPlayer/AudioBookPlayer.css
@@ -37,35 +37,6 @@
      }
 
 
-.loading-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 30vh;
-  top: 30px;
-}
-
-.loading-bar {
-  width: 80%;
-  height: 5px;
-  background-color: #007bff;
-  border-radius: 3px;
-  overflow: hidden;
-  position: relative;
-  margin-bottom: 20px;
-}
-
-.loading-bar::before {
-  content: "";
-  position: absolute;
-  height: 100%;
-  width: 20%;
-  background-color: #0056b3;
-  border-radius: 3px;
-  animation: loading-bar-animation 1.5s infinite ease-in-out;
-}
-
 @keyframes loading-bar-animation {
   0% {
     left: -20%;
@@ -78,15 +49,6 @@
   }
 }
 
-.loading-button {
-  padding: 10px 20px;
-  font-size: 16px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: not-allowed;
-}
 
 .microphoneIcon{
   height: 74px;
@@ -162,4 +124,69 @@
   font-weight: 400;
   color: black;
   font-size: 13px;
+}
+
+.loading-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: Arial, sans-serif;
+  height: 500px;
+}
+
+.audiobook-intro-container {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.loading-bar-container {
+  width: 80%;
+  height: 20px;
+  background-color: #e0e0e0;
+  border-radius: 10px;
+  overflow: hidden;
+  position: relative;
+}
+
+.loading-bar {
+  height: 100%;
+  width: 0%;
+  background-color: #7287f9;
+  transition: width 0.3s ease-out;
+}
+
+.loading-time {
+  margin-top: 10px;
+  font-size: 14px;
+  color: #555;
+}
+
+.loading-button {
+  margin-top: 20px;
+  background-color: #7287f9;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: not-allowed;
+  font-size: 16px;
+}
+
+.loading-container .loading-button:hover{
+  background-color: #e0e0e0;
+}
+
+.loading-percentage {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 16px;
+  font-weight: bold;
+  color: black;
+  /*
+  color: white;
+  -webkit-text-stroke-width: 0.6px;
+  -webkit-text-stroke-color: #7287f9;
+  */
 }
